<resources>
    <string name="app_name">Budgeting App</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="categories_tab_heading">Categories</string>
    <string name="types_tab_heading">Types</string>
    <string name="categories_switch">Show income</string>
    <string name="types_switch">Show savings</string>
    <string name="login_button">Continue with Google</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sheet_id_next_button">View Stats</string>
    <string name="sheet_id_edit_text_hint">Your Google Sheet ID</string>
    <string name="service_email">service-account@budgeting-app-389210.iam.gserviceaccount.com</string>
    <string name="google_sheet_id_instructions">Please share your Google Sheet with edit permissions with the email address below. Please ensure that your Google Sheet is in the right <a href="https://docs.google.com/document/d/1UWql0gntXs781yd3M3EMSsdCJHGfpmZq4U7UGSUPGRs/edit?usp=drive_link">format</a>.</string>
    <string name="tc_statement">I agree with the <a href="https://docs.google.com/document/d/1Vpe1hawi9dAVAXlHiQF5KIEhsWiuXczrY8oTN-XN1o0/edit?usp=drive_link">Terms Of Use</a></string>
    <string name="preference_file_key">budgeting_app_preferences</string>
    <string name="sheet_id_key">sheet_id</string>
    <string name="oauth_token_alias">oauth_token_alias</string>
    <string name="empty_transactions">No transactions for this period</string>
</resources>
